version/2024.1/_sources/tools/libraries/index.rst.txt
Tooling libraries
=================

.. grid:: 3
    :gutter: 3 3 4 4

    .. grid-item-card:: Ansys Tools Path
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://path.tools.docs.pyansys.com/version/0.4
      :text-align: center
      :class-title: pyansys-card-title

      Library to locate Ansys products in a local machine

    .. grid-item-card:: Ansys Tools Protobuf Compilation Helper
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://ansys.github.io/ansys-tools-protoc-helper/
      :text-align: center
      :class-title: pyansys-card-title

      Utility library to compile ``.proto`` files to Python source when building the package wheel

    .. grid-item-card:: PyAnsys Tools Report
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://report.tools.docs.pyansys.com/version/0.7
      :text-align: center
      :class-title: pyansys-card-title

      Tool for reporting your Python environment's package versions and hardware resources in a standardized way

    .. grid-item-card:: PyAnsys Tools Versioning
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://versioning.tools.docs.pyansys.com/version/0.5
      :text-align: center
      :class-title: pyansys-card-title

      Tool for backwards and forwards server support

    .. grid-item-card:: PyAnsys Units
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://units.docs.pyansys.com/version/0.2
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface for units, unit systems, and unit conversions