version/2025.1/_sources/tools/libraries/index.rst.txt
Tooling libraries
=================

.. grid:: 3
    :gutter: 3 3 4 4

    .. grid-item-card:: Ansys FileTransfer Tool
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://filetransfer.tools.docs.pyansys.com/version/0.1
      :class-title: pyansys-card-title

      Simple gRPC API tool for moving files between a client and a remote server

    .. grid-item-card:: Ansys Local Product Launcher
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://local-product-launcher.tools.docs.pyansys.com/version/0.1
      :class-title: pyansys-card-title

      Python utility for launching Ansys products on a local machine and configuring their launch settings

    .. grid-item-card:: Ansys Tools Path
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://path.tools.docs.pyansys.com/version/0.7
      :class-title: pyansys-card-title

      Library to locate Ansys products in a local machine

    .. grid-item-card:: Ansys Tools Protobuf Compilation Helper
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://ansys.github.io/ansys-tools-protoc-helper/
      :class-title: pyansys-card-title

      Utility library to compile ``.proto`` files to Python source when building the package wheel

    .. grid-item-card:: Ansys Tools Visualization interface
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://visualization-interface.tools.docs.pyansys.com/version/0.7
      :class-title: pyansys-card-title

      Python interface between PyAnsys libraries and plotting backends

    .. grid-item-card:: PyAnsys Tools Report
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://report.tools.docs.pyansys.com/version/0.8
      :class-title: pyansys-card-title

      Tool for reporting your Python environment's package versions and hardware resources in a standardized way

    .. grid-item-card:: PyAnsys Tools Variable Interop
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://variableinterop.docs.pyansys.com/version/0.1
      :class-title: pyansys-card-title

      Tool for defining basic variables, types, metadata, and values intended to provide interoperability between all products

    .. grid-item-card:: PyAnsys Tools Versioning
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://versioning.tools.docs.pyansys.com/version/0.6
      :class-title: pyansys-card-title

      Tool for backwards and forwards server support

    .. grid-item-card:: PyAnsys Units
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://units.docs.pyansys.com/version/0.3
      :class-title: pyansys-card-title

      Pythonic interface for units, unit systems, and unit conversions

    .. grid-item-card:: PyMaterials Manager
      :img-top: ../../_static/thumbnails/intro.png
      :link: https://manager.materials.docs.pyansys.com/version/0.2
      :class-title: pyansys-card-title

      Python package for unifying material management across the Ansys portfolio
